--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -6359,7 +6359,7 @@ MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 
 -BUG FIX: Miscellaneous fixes
 
--Added Admin Config settings into these admin interface sections (these config settings are now editable in the admin interface): Plugins Main Category, Address Balance Tracker (plugin)
+-Added Admin Config settings into these admin interface sections (these config settings are now editable in the admin interface): News Feeds, Plugins, Address Balance Tracker (plugin)
 
 -Consolidated error / debug logs into one log file, for clarified debugging output (whe debugging is enabled)
 
@@ -6370,6 +6370,9 @@ MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 -Updated documentation
 
 IMPORTANT *UPGRADE* NOTICE:
+
+v6.00.29 and higher renames / restructures the News Feeds config. USE THE LATEST/UPGRADED CONFIG.PHP,
+AND MIGRATE YOUR EXISTING CUSTOM NEWS FEEDS TO THE NEW FORMAT.
 
 v6.00.26 / v6.00.27 and higher renames the admin config array variables. ALL CONFIGURATION SETTING
 VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP, AND
