--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -171,25 +171,40 @@ https://zksync.io/api/v0.1.html (KEEP AN EYE OUT FOR V2 DOCS AS WELL)
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 
-UPGRADES TO THE CACHED CONFIG change the order in which NEW UPGRADE settings are saved in the CACHED config, which leads to undesireable ordering of settings in the interface. Look into adding an admin settings interface parameter, which allows us to specify the EXACT order we want settings to display in the interface.
-
-
-There were a few bugs in the cached config upgrade mechanism still (that I just fixed). Needs to be torture tested some more, to make sure the fixes are good.
-
-
-Validate news feeds settings interface input / all plugin settings interface inputs.
+Consider using the array ordering mapper logic we built for the cached config upgrades, also in the queue_config_update() function. Then not only do we GUARANTEE consistant ordering of settings in the admin area, BUT we ALSO would have consistant array ordering in the cached config "UNDER THE HOOD"...WHICH MAKES APP DEVELOPMENT A BIT EASIER IN THE TEST / REVIEW DEPARTMENT. Different SUBARRAY values in the cached config should be fine, as we are only mapping the ROOT array keys that ALWAYS EXIST (NOT EVER REMOVABLE BY A USER IN THE INTERFACE).
 
 
 Use a slider for number values, instead of dropdown select menus.
 
 
-Add a logout class to the logout link, and add an onclick event listener that does the same type of notice instantly like if we enable privacy mode while in the admin area.
-
-
-Add admin config interfaces for all funtional plugins.
+Validate news feeds settings interface input / all plugin settings interface inputs.
 
 
 CACHE an md5 hash of all telegram settings combined, and only delete the chatroom data / refresh it if this md5 hash changes (like we do for light chart config). Otherwise you get a bad UX from endlessly getting alerts to re-enter "/start" in the chatroom EVERYTIME YOU UPDATE *ANY* ADMIN SETTINGS.
+
+
+There were a few bugs in the cached config upgrade / downgrade mechanism still (that I just fixed). Needs to be torture tested some more, to make sure the fixes are good, including bundled plugins.
+
+
+Triple-check adding / removing a plugin subdirectory, in regular AND high security mode, AND with plugin activation on AND off.
+
+
+RE-TEST ALL admin config interface settings, as we completely overhauled it to support subarrays and plugins. TEST IN FIREFOX TOO. ALSO DO A CODE REVIEW OF THE ENTIRE ADMIN CLASS FUNCTIONS.
+
+
+Test out the new iframe-reloading HALT mechanism (if a halt was called on updating the cached admin config), AND iframe reloading in general.
+
+
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~DO AN APP RELEASE AT THIS POINT IN THIS LIST~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+
+Add a logout class to the logout link, and add an onclick event listener that does the same type of notice instantly like if we enable privacy mode while in the admin area.
+
+
+Add BTC to documentation om supported trading pairs (in help / faq, readme, troubleshooting, and project page).
+
+
+Update screenshots, since we overhauled everything in the interface.
 
 
 Add onchange to every admin interface setting field, with a call to a function to update a hidden field in that section, which lets us know a user has updated the settings in that section. Then we can warn them they have unsaved changes if they go to leave that section. Maybe toggle it making a 'sticky' position save button in red show in a top corner of the iframe? Onblur of admin section (clicking another section link, etc) should pause click actions and warn IF CHANGES HAVE BEEN MADE TO SETTINGS WITHIN THE ADMIN SECTION. Include on exiting admin config area (returning to portfolio page / closing tab).
@@ -201,12 +216,6 @@ https://account.venmo.com/u/taoteh1221
 
 Add to resources page:
 https://www.validators.app/
-
-
-Add ARM stock.
-
-
-Add more Jupiter agg markets to Solana coins in price target plugin.
 
 
 Research whether POST data size affects header size like cookie data size does.
@@ -259,27 +268,6 @@ Change semantic naming of 'coin_amnts' form id, as it now also handles charts / 
 
 
 Change the last option in the ext_data() function to a human-readable value, to save time on new API integrations (url_encode, json_encode, etc).
-
-
-Add BTC to documentation om supported trading pairs (in help / faq, readme, troubleshooting, and project page).
-
-
-RE-TEST ALL admin config interface settings, as we completely overhauled it to support subarrays and plugins. TEST IN FIREFOX TOO. ALSO DO A CODE REVIEW OF THE ENTIRE ADMIN CLASS FUNCTIONS.
-
-
-Test refactored logging system WITH DEBUGGING OFF.
-
-
-Triple-check cached config upgrading / downgrading logic, including bundled plugins.
-
-
-Triple-check adding / removing a plugin subdirectory, in regular AND high security mode, AND with plugin activation on AND off.
-
-
-Test out the new iframe-reloading HALT mechanism (if a halt was called on updating the cached admin config), AND iframe reloading in general.
-
-
-Update screenshots, since we overhauled everything in the interface.
 
 
 Add remote IP address data to ALL relevant security error logging everywhere in the app.
@@ -489,6 +477,9 @@ Look into laptop touchscreen zingchart js error on Ubuntu 20.04 / Chrome ON SMAL
 FEATURES / NEW ARCHITECTURE (*NOT* PRIORITIZED)
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
+
+On the backup / restore admin page, have all the backups (charts / configs) listed, with a dropdown menu next to each for restore / download.
 
 
 Add ability to set what decimal and thousands seperators to use, AUTOMATICALLY BASED OF JAVASCRIPT LOCALE like we do for the ticker app (by wrapping all numbers in a class, and converting on document load).
