--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -6363,6 +6363,8 @@ MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 
 -Added config file formatting error checks (if a significant error that would crash the app is discovered, you are notified, and the current config file is securely backed up / replaced with a 'factory reset' config)
 
+-Updated the alphavantage.co stock exchange API daily FREE LEVEL to 25 requests per day (LIVE data will be auto-throttled, so you don't go over your FREE daily limit)
+
 -Consolidated error / debug logs into one log file, for clarified debugging output (whe debugging is enabled)
 
 -Added range sliders in place of all drop-down select menus (for numerical values) in the admin interface
